# feature_tracking

feature_tracking_core/: package.xml
image_preproc/: package.xml
image_preproc_ros_tool/: package.xml
matcher_python_binding/: CMakeLists.txt  package.xml
matcher_python_binding/notebook/: feature_tracking_notebook.py
matcher_python_binding/python_api/: feature_tracking.cpp  tracker_libviso.cpp
matcher_python_binding/src/: mono_matcher_binding.cpp
matcher_python_binding/test/: test_feature_tracking.py  test_mono_matcher.py  unittest_matcher.py
matches_msg_ros/: package.xml
viso_feature_tracking_ros_tool/: package.xml
