<?xml version="1.0"?>
<package format="2">
  <name>feature_tracking_core</name>
  <version>0.0.0</version>
  <description>Library for tracking visual features.</description>

  <license>GPLv3</license>
  <maintainer email="eike.rehder@kit.edu">Eike Rehder</maintainer>
  <author email="eike.rehder@kit.edu">Eike Rehder</author>
  <url type="repository">http://github.com/KIT-MRT/feature_tracking</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mrt_cmake_modules</build_depend>
  <test_depend>gtest</test_depend>
  <depend>viso2</depend>
  <depend>opencv</depend>
  
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
