<package format="2">
  <name>image_preproc_ros_tool</name>
  <version>0.0.0</version>
  <description>ToDo: Edit package description</description>

  <license>GPLv3</license>
  <maintainer email="johannes.graeter@kit.edu">Johannes Graeter</maintainer>
  <author email="eike.rehder@kit.edu">Eike Rehder</author>
  <author email="johannes.graeter@kit.edu">Johannes Graeter</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mrt_cmake_modules</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <test_depend>gtest</test_depend>

  <build_depend>roscpp</build_depend>
  <depend>dynamic_reconfigure</depend>
  <!-- <build_depend>rospy</build_depend> Use this instead of roscpp  when writing a python node -->
  <depend>rosinterface_handler</depend>
  <depend>roslib</depend>
  <depend>nodelet</depend>
  <depend>opencv</depend>
  <depend>cv_bridge</depend>
  <depend>image_preproc</depend>
  <depend>image_transport</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>image_geometry</depend>
  <test_depend>rostest</test_depend>
  <depend>message_filters</depend>
  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
