<?xml version="1.0"?>
<package format="2">
  <name>matcher_python_binding</name>
  <version>0.0.0</version>
  <description>ToDo: Edit package description</description>

  <license>GPLv3</license>
  <maintainer email="johannes.graeter@kit.edu">Johannes Graeter</maintainer>
  <author email="johannes.graeter@kit.edu">Johannes Graeter</author>
  <url type="repository">https://gitlab.mrt.uni-karlsruhe.de/graeter/viso2_python_interface.git</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mrt_cmake_modules</build_depend>
  <test_depend>gtest</test_depend>
  <depend>libboost-python-dev</depend> 
  <depend>viso2</depend> 
  <depend>opencv</depend> 
  <depend>feature_tracking_core</depend> 
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
